--- a/style.css
+++ b/style.css
@@ -1,18 +1,61 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: rgb(190, 192, 193);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: rgb(190, 192, 193);
 }
 
-.body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(https://media.istockphoto.com/id/1370365587/photo/big-eyed-naughty-obese-cat-looking-at-the-target.jpg?b=1&s=170667a&w=0&k=20&c=468okwKwMosVm_DxsNTfe5ms9h5_8w0ETSk51Ys6I5k=);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://media.istockphoto.com/id/1370365587/photo/big-eyed-naughty-obese-cat-looking-at-the-target.jpg?b=1&s=170667a&w=0&k=20&c=468okwKwMosVm_DxsNTfe5ms9h5_8w0ETSk51Ys6I5k=);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.container {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.win {
+  font-size: 2rem;
+}
+
+.btn {
+  margin-left: 1rem;
+  width: 75px;
+  height: 35px;
+  border: double;
+  border-radius: 50px;
+  background-color: #4158d0;
+  cursor: pointer;
+}
+
+.input {
+  height: 35px;
+  color: #4158d0;
+  border-radius: 1rem;
+  text-indent: 1rem;
+  outline: none;
+}
+
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.bottom {
+  text-align: center;
+  font-size: 2rem;
 }
